; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/st/extr_phy-stm32-usbphyc.c_stm32_usbphyc_phy_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/st/extr_phy-stm32-usbphyc.c_stm32_usbphyc_phy_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy = type { i32 }
%struct.stm32_usbphyc_phy = type { i32, %struct.stm32_usbphyc* }
%struct.stm32_usbphyc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy*)* @stm32_usbphyc_phy_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stm32_usbphyc_phy_init(%struct.phy* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.phy*, align 8
  %4 = alloca %struct.stm32_usbphyc_phy*, align 8
  %5 = alloca %struct.stm32_usbphyc*, align 8
  %6 = alloca i32, align 4
  store %struct.phy* %0, %struct.phy** %3, align 8
  %7 = load %struct.phy*, %struct.phy** %3, align 8
  %8 = call %struct.stm32_usbphyc_phy* @phy_get_drvdata(%struct.phy* %7)
  store %struct.stm32_usbphyc_phy* %8, %struct.stm32_usbphyc_phy** %4, align 8
  %9 = load %struct.stm32_usbphyc_phy*, %struct.stm32_usbphyc_phy** %4, align 8
  %10 = getelementptr inbounds %struct.stm32_usbphyc_phy, %struct.stm32_usbphyc_phy* %9, i32 0, i32 1
  %11 = load %struct.stm32_usbphyc*, %struct.stm32_usbphyc** %10, align 8
  store %struct.stm32_usbphyc* %11, %struct.stm32_usbphyc** %5, align 8
  %12 = load %struct.stm32_usbphyc*, %struct.stm32_usbphyc** %5, align 8
  %13 = call i32 @stm32_usbphyc_pll_enable(%struct.stm32_usbphyc* %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %1
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %2, align 4
  br label %21

18:                                               ; preds = %1
  %19 = load %struct.stm32_usbphyc_phy*, %struct.stm32_usbphyc_phy** %4, align 8
  %20 = getelementptr inbounds %struct.stm32_usbphyc_phy, %struct.stm32_usbphyc_phy* %19, i32 0, i32 0
  store i32 1, i32* %20, align 8
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %18, %16
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local %struct.stm32_usbphyc_phy* @phy_get_drvdata(%struct.phy*) #1

declare dso_local i32 @stm32_usbphyc_pll_enable(%struct.stm32_usbphyc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
